Fixing iterators and uses of keySet to entrySet